--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,109 @@
-# Dependencies
-node_modules/
-package-lock.json
+#-------------------------
+# Operating Specific Junk Files
+#-------------------------
 
-# IDE
-.vscode/
-.idea/
-
-# OS
+# OS X
 .DS_Store
+.AppleDouble
+.LSOverride
+
+# OS X Thumbnails
+._*
+
+# Windows image file caches
 Thumbs.db
+ehthumbs.db
+Desktop.ini
 
-# Build
-frontend/build/
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
 
-# Logs
-*.log
-npm-debug.log*
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
 
-# Environment
+# Windows shortcuts
+*.lnk
+
+# Linux
+*~
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+#-------------------------
+# Environment Files
+#-------------------------
+# These should never be under version control,
+# as it poses a security risk.
 .env
-.env.local
+.vagrant
+Vagrantfile
+
+#-------------------------
+# Temporary Files
+#-------------------------
+writable/cache/*
+!writable/cache/index.html
+
+writable/logs/*
+!writable/logs/index.html
+
+writable/session/*
+!writable/session/index.html
+
+writable/uploads/*
+!writable/uploads/index.html
+
+writable/debugbar/*
+
+php_errors.log
+
+#-------------------------
+# User Guide Temp Files
+#-------------------------
+user_guide_src/build/*
+user_guide_src/cilexer/build/*
+user_guide_src/cilexer/dist/*
+user_guide_src/cilexer/pycilexer.egg-info/*
+
+#-------------------------
+# Test Files
+#-------------------------
+tests/coverage*
+
+# Don't save phpunit under version control.
+phpunit
+
+#-------------------------
+# Composer
+#-------------------------
+vendor/
+composer.lock
+
+#-------------------------
+# IDE Files
+#-------------------------
+.idea/
+*.swp
+*.swo
+*~.nib
+.vscode/
+
+#-------------------------
+# Node.js
+#-------------------------
+node_modules/
+npm-debug.log
+yarn-error.log
+
+#-------------------------
+# Grocery CRUD
+#-------------------------
+public/assets/grocery-crud/
+assets/grocery-crud/
