--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "sewadar/management-app",
-    "description": "Sewadar Management Application using CodeIgniter 4 and Grocery CRUD",
+    "name": "codeigniter4/sewadar-app",
+    "description": "Sewadar Management System built with CodeIgniter 4 and Grocery CRUD",
     "type": "project",
+    "license": "MIT",
     "require": {
         "php": "^7.4 || ^8.0",
-        "codeigniter4/framework": "^4.4",
-        "grocerycrud/enterprise": "^3.0"
+        "codeigniter4/framework": "^4.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
@@ -14,18 +14,26 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Config\\": "app/Config/"
         },
         "exclude-from-classmap": [
             "**/Database/Migrations/**"
         ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\Support\\": "tests/_support"
+        }
+    },
+    "scripts": {
+        "test": "phpunit"
     },
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "scripts": {
-        "test": "phpunit"
-    }
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
